--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "server.py", "use": "@vercel/python" }
-    ],
-    "routes": [
-      { "src": "/(.*)", "dest": "server.py" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "api/predict.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/predict", "dest": "/api/predict.py" }
+  ]
+}
